Perhaps a little bit more structured?

--- a/resources/stats.jade
+++ b/resources/stats.jade
@@ -3,18 +3,16 @@ html
 		include head.jade
 	body
 		include header.jade
-		h2 Stats page WOOO
-		p= stats.hitCountToday
-		p= stats.hitCountYesterday
+		h2 Stats page
 		
 		canvas(id="myChart" width="400" height="400")
 		
-		//- p
-		//- 	pre= stats.hitsTodayFormatted
+		p
+			pre= stats.hitsTodayFormatted
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js")
 		script(src="https://code.jquery.com/jquery-2.1.4.min.js")
 		script
-			= "var hits = [" + stats.hitCountYesterday + ", " + stats.hitCountToday + "];"
+			!= "var stats = " + JSON.stringify(stats) + ";"
 		script
 			include stats.js
 		include footer.jade
